--- a/gb/19/9/9/n11508560.md
+++ b/gb/19/9/9/n11508560.md
@@ -1,54 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>»ª¶û½ÖÍ­Å£ÓÒ½Ç ±»ÈËÔÒÆÆÒ»µÀÁÑ¿Ú</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/09/fd458905c1a412c793a6533246e2ea93-600x400.jpg" />
-<h6>Í­Å£±»ÔÒÆÆ¡£ (¶ÁÕßÌá¹©)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbduwl3755/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/cbduwl3755/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cbduwl3755/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cbduwl3755/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/cbduwl3755/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/cbduwl3755/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/cbduwl3755/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>åŽå°”è¡—é“œç‰›å³è§’ è¢«äººç ¸ç ´ä¸€é“è£‚å£</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/09/fd458905c1a412c793a6533246e2ea93-600x400.jpg" />
+<h6>é“œç‰›è¢«ç ¸ç ´ã€‚ (è¯»è€…æä¾›)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê09ÔÂ09ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÁÖµ¤Å¦Ô¼±¨µ¼£©ÃÀ¹úÅ¦Ô¼Âü¹þ¶ÙµØ±ê<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%8D%8E%E5%B0%94%E8%A1%97.md">»ª¶û½Ö</a><a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%93%9C%E7%89%9B.md">Í­Å£</a>£¨Charging Bull£©ÔÚ7ÈÕ£¨ÖÜÁù£©ÔâÈËÓÃÓ²ÎïÔÒËð»µ£¬Å£½ÇÁôÏÂÁÑ¿Ú£¬ÒÉ·¸±»¾¯·½´þ²¶£¬ÔÝÎ´Öª·¸°¸¶¯»ú¡£</p>
-<figure id="11508565" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2019/09/87c7130f8da27e8677915d0321b72c13-450x600.jpg" alt="ÆÆ»µÍ­Å£µÄÈË±»¾¯·½´þ²¶¡£" width="500" /><figcaption class="wp-caption-text">ÆÆ»µ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%93%9C%E7%89%9B.md">Í­Å£</a>µÄÈË±»¾¯·½´þ²¶¡££¨¶ÁÕßÌá¹©£©</figcaption></figure>
-<figure id="11508564" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2019/09/1166036497eb64f21899efbb87576774-450x300.jpg" alt="µÂÖÝÄÐ×ÓÄÃ×ÅÒ»¸öÏñ¼ªËûµÄ¶«Î÷ÔÒÍ­Å£¡£" width="500" /><figcaption class="wp-caption-text">µÂÖÝÄÐ×ÓÄÃ×ÅÒ»¸öÏñ¼ªËûµÄ¶«Î÷ÔÒÍ­Å£¡££¨¶ÁÕßÌá¹©£©</figcaption></figure>
-<figure id="11508563" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2019/09/5a23815745f9e8d803cf7739be0106c9-450x600.jpg" alt="µÂÖÝÄÐ×ÓÄÃ×ÅÒ»¸öÏñ¼ªËûµÄ¶«Î÷ÔÒÍ­Å£¡£" width="500" /><figcaption class="wp-caption-text">µÂÖÝÄÐ×ÓÄÃ×ÅÒ»¸öÏñ¼ªËûµÄ¶«Î÷ÔÒÍ­Å£¡££¨¶ÁÕßÌá¹©£©</figcaption></figure>
-<p>°¸·¢ÔÚÖÐÎç12Ê±°ë×óÓÒ£¬À´×ÔµÂÖÝµÄ42ËêÄÐ×ÓÍß¶ûÀ³¿Ë£¨Tevon Varlack£©ÊÖ³ÖÒ»¸öÏñ¼ªËûµÄ´óÐÍÎï¼þ£¬¶à´ÎÔÒÍ­Å£µÄÓÒ½Ç£¬Í­Å£±»ÔÒÆÆÒ»¸öÁÑ¿Ú£¬²¢ÁôÏÂ¶àµÀ»®ºÛ¡£</p>
-<p>Ä¿»÷Õß³Æ£¬Íß¶ûÀ³¿Ë±ßÇÃ´òÍ­Å£±ßÓÃ´Ö¿ÚÂîÃÀ¹ú×ÜÍ³ÌØÀÊÆÕ¡£¾¯·½ºÜ¿ìµ½³¡¾Ð²¶Ëû£¬²¢ÒÔÐÌÊÂÐÐÎª²»¼ì¡¢·Ç·¨³ÖÐµ¡¢ÈÅÂÒÉç»áÖÎ°²µÄ×ïÃûÆðËß¡£</p>
-<p><a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%8D%8E%E5%B0%94%E8%A1%97.md">»ª¶û½Ö</a>Í­Å£ÊÇÅ¦Ô¼µØ±ê£¬1989Äê°²·ÅÔÚÂü¹þ¶Ù½ðÈÚÇø»ª¶û½Ö¸½½ü£¬ÓÉÓÚÏóÕ÷¡°Å£ÊÐ¡±£¬µñËÜ³ÉÎªÃÀ¹ú½ðÈÚÊÐ³¡¡°¼ªÏéÎï¡±¡£µñËÜ¹ýÈ¥Ò²ÔøÔâÆÆ»µ£¬2008Äê¼°2017ÄêÔøÓÐÈËÏòÍ­Å£ÆÃÀ¶Æá¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£º¼ÒÈð</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´09æœˆ09æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…æž—ä¸¹çº½çº¦æŠ¥å¯¼ï¼‰ç¾Žå›½çº½çº¦æ›¼å“ˆé¡¿åœ°æ ‡<ahref="https://github.com/cbduwl3755/djy/blob/master/gb/tag/%E5%8D%8E%E5%B0%94%E8%A1%97.md#1">åŽå°”è¡—</a><ahref="https://github.com/cbduwl3755/djy/blob/master/gb/tag/%E9%93%9C%E7%89%9B.md#1">é“œç‰›</a>ï¼ˆCharging Bullï¼‰åœ¨7æ—¥ï¼ˆå‘¨å…­ï¼‰é­äººç”¨ç¡¬ç‰©ç ¸æŸåï¼Œç‰›è§’ç•™ä¸‹è£‚å£ï¼Œç–‘çŠ¯è¢«è­¦æ–¹é€®æ•ï¼Œæš‚æœªçŸ¥çŠ¯æ¡ˆåŠ¨æœºã€‚</p>
+<figure id="11508565" aria-describedby="caption-11508565" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/09/87c7130f8da27e8677915d0321b72c13-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/09/87c7130f8da27e8677915d0321b72c13-450x600.jpg" alt="ç ´åé“œç‰›çš„äººè¢«è­¦æ–¹é€®æ•ã€‚" width="500" /></a><figcaption id="caption-11508565" class="wp-caption-text">ç ´å<ahref="https://github.com/cbduwl3755/djy/blob/master/gb/tag/%E9%93%9C%E7%89%9B.md#1">é“œç‰›</a>çš„äººè¢«è­¦æ–¹é€®æ•ã€‚ï¼ˆè¯»è€…æä¾›ï¼‰</figcaption></figure>
+<figure id="11508564" aria-describedby="caption-11508564" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/09/1166036497eb64f21899efbb87576774-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/09/1166036497eb64f21899efbb87576774-450x300.jpg" alt="å¾·å·žç”·å­æ‹¿ç€ä¸€ä¸ªåƒå‰ä»–çš„ä¸œè¥¿ç ¸é“œç‰›ã€‚" width="500" /></a><figcaption id="caption-11508564" class="wp-caption-text">å¾·å·žç”·å­æ‹¿ç€ä¸€ä¸ªåƒå‰ä»–çš„ä¸œè¥¿ç ¸é“œç‰›ã€‚ï¼ˆè¯»è€…æä¾›ï¼‰</figcaption></figure>
+<figure id="11508563" aria-describedby="caption-11508563" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/09/5a23815745f9e8d803cf7739be0106c9-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/09/5a23815745f9e8d803cf7739be0106c9-450x600.jpg" alt="å¾·å·žç”·å­æ‹¿ç€ä¸€ä¸ªåƒå‰ä»–çš„ä¸œè¥¿ç ¸é“œç‰›ã€‚" width="500" /></a><figcaption id="caption-11508563" class="wp-caption-text">å¾·å·žç”·å­æ‹¿ç€ä¸€ä¸ªåƒå‰ä»–çš„ä¸œè¥¿ç ¸é“œç‰›ã€‚ï¼ˆè¯»è€…æä¾›ï¼‰</figcaption></figure>
+<p>æ¡ˆå‘åœ¨ä¸­åˆ12æ—¶åŠå·¦å³ï¼Œæ¥è‡ªå¾·å·žçš„42å²ç”·å­ç“¦å°”èŽ±å…‹ï¼ˆTevon Varlackï¼‰æ‰‹æŒä¸€ä¸ªåƒå‰ä»–çš„å¤§åž‹ç‰©ä»¶ï¼Œå¤šæ¬¡ç ¸é“œç‰›çš„å³è§’ï¼Œé“œç‰›è¢«ç ¸ç ´ä¸€ä¸ªè£‚å£ï¼Œå¹¶ç•™ä¸‹å¤šé“åˆ’ç—•ã€‚</p>
+<p>ç›®å‡»è€…ç§°ï¼Œç“¦å°”èŽ±å…‹è¾¹æ•²æ‰“é“œç‰›è¾¹ç”¨ç²—å£éª‚ç¾Žå›½æ€»ç»Ÿç‰¹æœ—æ™®ã€‚è­¦æ–¹å¾ˆå¿«åˆ°åœºæ‹˜æ•ä»–ï¼Œå¹¶ä»¥åˆ‘äº‹è¡Œä¸ºä¸æ£€ã€éžæ³•æŒæ¢°ã€æ‰°ä¹±ç¤¾ä¼šæ²»å®‰çš„ç½ªåèµ·è¯‰ã€‚</p>
+<p><ahref="https://github.com/cbduwl3755/djy/blob/master/gb/tag/%E5%8D%8E%E5%B0%94%E8%A1%97.md#1">åŽå°”è¡—</a>é“œç‰›æ˜¯çº½çº¦åœ°æ ‡ï¼Œ1989å¹´å®‰æ”¾åœ¨æ›¼å“ˆé¡¿é‡‘èžåŒºåŽå°”è¡—é™„è¿‘ï¼Œç”±äºŽè±¡å¾â€œç‰›å¸‚â€ï¼Œé›•å¡‘æˆä¸ºç¾Žå›½é‡‘èžå¸‚åœºâ€œå‰ç¥¥ç‰©â€ã€‚é›•å¡‘è¿‡åŽ»ä¹Ÿæ›¾é­ç ´åï¼Œ2008å¹´åŠ2017å¹´æ›¾æœ‰äººå‘é“œç‰›æ³¼è“æ¼†ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå®¶ç‘ž</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/9/9/n11508560.htm">»ª¶û½ÖÍ­Å£ÓÒ½Ç ±»ÈËÔÒÆÆÒ»µÀÁÑ¿Ú</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/12/n11446678.htm">¸ê±Ú¶«£º¡¶»ª¶û½ÖÈÕ±¨¡·Ò²È¾ºìÁË£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/29/n11417205.htm">³ÌÏþÅ©£º»ª¶û½ÖÎªºÎ²»ÏàÐÅ±±¾©µÄ³ÐÅµ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/11/n11313726.htm">·ÖÎö£º¶àÖØÒòËØÏÂ »ª¶û½Ö¿ªÊ¼Ô¶ÀëÖÐ¹²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/10/n11312826.htm">´óÂ½ÖªÃû²Æ¾­×ÔÃ½Ìå¡¶»ª¶û½Ö¼ûÎÅ¡·±»¹ØÍ£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/9/n10842139.htm">ÄÉÍßÂÞ£º´¨ÆÕÖ÷µ¼Ì¸ÅÐ »ª¶û½ÖÎðËæÖÐ¹²ÆðÎè</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/17/n10721435.htm">ÃÀÃ½£ºÎªºÎ»ª¶û½ÖÎÞÁ¦×èÖ¹ÖÐÃÀÃ³Ò×Õ½£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/14/n10715002.htm">ÖÐ¹²¼±Çë»ª¶û½Ö´óÀÐ¿ª»á ±³ºóÓÐºÎÓÃÒâ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/11/2/n8452147.htm">Ã»ÓÐÃûÐ£ÑªÍ³ Ò²ÄÜ½ø»ª¶û½Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/10/5/n8367422.htm">²ÌÓ¢ÎÄ½ÓÊÜÃÀ¹ú¡¶»ª¶û½ÖÈÕ±¨¡·×¨·ÃÈ«ÎÄ</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/8/n11506711.htm">¡¾¸üÐÂÖÐ¡¿9.8¸ÛÈËÃÀÁì¹ÝÇëÔ¸ ¾¯¿ñÉä´ßÀáµ¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/8/n11507873.htm">ÖÐ¹²Óû¶áÁªºÏ¹úÒªÖ° ÍøÃñ°×¹¬ÍøÕ¾ÁªÊðÁ¦×è</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/8/n11507361.htm">ÃÀ×ÊÉîÃ½ÌåÈË£ºÖÐ¹²ËÄ¹ÜÆëÏÂ×è´¨ÆÕÁ¬ÈÎ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/8/n11507869.htm">×¨¼Ò£ºÃÀÖÐ¹ØÏµ¼«ÎªÕðµ´ »ò·¢Éú¸ù±¾ÐÔ¸Ä±ä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11498523.htm">Îå¸öºÍÉÐÈ¥´¦²»Í¬ Éñ·ð¿´µÄÊÇÈËÐÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11497534.htm">¡¾²¦¿ªÃÔÎí¡¿Í¬ÄêÔÂÈÕÊ±³öÉúµÄÈË ÃüÔË»áÏàÍ¬Âð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/1/n11492269.htm">Ò»¸öÕæÊµµÄ¡°ÁÄÕ«¹ÊÊÂ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/24/n11475066.htm">¡°ÓÐÐ©Õ®»¹²»Íê¡± ¶«Î÷·½Éñ»°´«Ëµ£ºÇáÉúÓÐ×ï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/30/n11488625.htm">ÍõºÕ£ºÏ°½üÆ½µ±Ç°ÃæÁÙµÄËÄÖØÀ§¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/7/n11505756.htm">ÖÐ¹²¡°Ê®Ò»Ä£Ê½¡±ÈçÁÙ´óµÐ ¹ÙÃ½Í·°æ³öÆæÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11504191.htm">»ÆÇïÉú»ñÑû»ØÄ¸Ð£·ÖÏí£º°×É«¿Ö²ÀÏÂºÎÈ¥ºÎ´Ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11502718.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ÐÞÀý³·»Ø ¸ÛÈËÎªºÎÈÔÉÏ½Ö£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11499962.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ÁÖÖ£³·ÐÞÀý ±±¾©Óë¸ÛÈË»¥¡°Ì¯ÅÆ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11499456.htm">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£³·ÐÞÀý ±±¾©·´³£ ¸ÛÈËÅ­ÄÑÆ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/8/n11506579.htm">¡¶¿àÁ¦¡·ÊÕÊÓÂÊÔÙÉý ÕÅÇí×ËÓëÇ×ÉúÅ®Í¬Ì¨ÑÝ³ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11504191.htm">»ÆÇïÉú»ñÑû»ØÄ¸Ð£·ÖÏí£º°×É«¿Ö²ÀÏÂºÎÈ¥ºÎ´Ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11504529.htm">¸ºÃæÏûÏ¢Æµ´« ±¾É½´«Ã½¸ÄÃû²»ÔÙÐÕÕÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11504667.htm">»ñ»ú×éÈËÔ±ÁôÑÔ´òÆø ºÎÔÏÊ«°ÄÖÞÑÝ½²¹éÀ´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/8/n11507697.htm">´«ÖÐ¹²ÓÖ·¢¡°ÏÞÌ¨Áî¡± ·âÉ±Ì¨ÍåÑÝÖ°ÈËÔ±</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/16/10/5/n8367422.md#1">è”¡è‹±æ–‡æŽ¥å—ç¾Žå›½ã€ŠåŽå°”è¡—æ—¥æŠ¥ã€‹ä¸“è®¿å…¨æ–‡</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/16/11/2/n8452147.md#1">æ²¡æœ‰åæ ¡è¡€ç»Ÿ ä¹Ÿèƒ½è¿›åŽå°”è¡—</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/9/14/n10715002.md#1">ä¸­å…±æ€¥è¯·åŽå°”è¡—å¤§ä½¬å¼€ä¼š èƒŒåŽæœ‰ä½•ç”¨æ„ï¼Ÿ</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/9/17/n10721435.md#1">ç¾Žåª’ï¼šä¸ºä½•åŽå°”è¡—æ— åŠ›é˜»æ­¢ä¸­ç¾Žè´¸æ˜“æˆ˜ï¼Ÿ</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/11/9/n10842139.md#1">çº³ç“¦ç½—ï¼šå·æ™®ä¸»å¯¼è°ˆåˆ¤ åŽå°”è¡—å‹¿éšä¸­å…±èµ·èˆž</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/19/6/10/n11312826.md#1">å¤§é™†çŸ¥åè´¢ç»è‡ªåª’ä½“ã€ŠåŽå°”è¡—è§é—»ã€‹è¢«å…³åœ</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/19/6/11/n11313726.md#1">åˆ†æžï¼šå¤šé‡å› ç´ ä¸‹ åŽå°”è¡—å¼€å§‹è¿œç¦»ä¸­å…±</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/19/7/29/n11417205.md#1">ç¨‹æ™“å†œï¼šåŽå°”è¡—ä¸ºä½•ä¸ç›¸ä¿¡åŒ—äº¬çš„æ‰¿è¯ºï¼Ÿ</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/19/8/12/n11446678.md#1">æˆˆå£ä¸œï¼šã€ŠåŽå°”è¡—æ—¥æŠ¥ã€‹ä¹ŸæŸ“çº¢äº†ï¼Ÿ</a></li>
+<li><a href="https://github.com/cbduwl3755/djy/blob/master/gb/21/10/19/n13314194.md#1">å¸‚é•¿å€™é€‰äººäºšå½“æ–¯ï¼šè‹¥å½“é€‰å°†å‡çº§åº‡æŠ¤åŸŽ</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/9/9/n11508560.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/7/n11851768.md#1" target="_blank">å¤§ç˜Ÿç–«å¾·å›½ä¸¤åŸŽæ›¾åŒå‘½è¿ ä¸ºä½•ä»Šæ—¥è¿¥å¼‚</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">ä¸€ä»½ä¼ å•åœ†æ¢¦ ç½—é©¬é’å¹´åä¸­å›½äººè„±ç¦»æš´æ”¿</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/16/n11943195.md#1">æ—¥åª’ä½“äººè¯„å°æ¹¾é˜²ç–«2å¤§åŠŸè‡£ ç¬¬ä¸€åç«Ÿéžé™ˆæ—¶ä¸­</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/16/n11945071.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å®˜åª’å¿™é™æ¸©ï¼Ÿèµµç«‹åšåŠäº”æ¯›è¢«æ‰“è„¸</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/17/n11946346.md#1">ã€çŽ°åœºè§†é¢‘ã€‘å¬ä¿¡ä¸­å…±è°Žè¨€ è¿”äº¬äººæŒ¤çˆ†æœºåœº</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/17/n11945722.md#1">ã€ç¿»å¢™å¿…çœ‹ã€‘å®˜åª’åå¸¸ æ‰¹èµµç«‹åšâ€œä¸‹ä½œâ€ï¼Ÿ</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/17/n11948259.md#1">ä¸­å…±æ’¤é©»åŽç¾Žåª’è®°è€…å·¥ä½œè¯ è“¬ä½©å¥¥å¼ºçƒˆå›žåº”</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/17/n11946544.md#1">å°æ­Œä»”æˆå›½å®å°å‡¤ä»™ç—…é€ äº«å¯¿80å²ã€€</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/17/n11947993.md#1">ä¼Šæœ—éšçž’ç–«æƒ… æ¥è‡ªä¼Šæœ—çš„å°æ¹¾å¥³å©¿çˆ†çœŸç›¸</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹ä¸­å…±ç—…æ¯’</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/11/n11933369.md#1">æ¸…æœå­¦å£«ä¸‰å¥‡æ¢¦ æ˜¯è°æŽŒæ¡ä»–çš„ä¸€ç”Ÿï¼Ÿ</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/11/n11933376.md#1">åƒ§äººç²¾å‡†é¢„è¨€ ç…çŠä¸‰å­©ç«¥ç«Ÿæ˜¯â€œçœŸä¸€å“â€</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/13/1/31/n3790016.md#1">ç±³å¼€æœ—åŸºç½—Michelangeloï¼ˆ1ï¼‰æ—©å¹´ç”Ÿæ¶¯</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/17/n11946008.md#1">åäººçº·ç¡®è¯Š ã€ŠæƒåŠ›æ¸¸æˆã€‹ã€Šå¤ä»‡è€…ã€‹æ¼”å‘˜æŸ“ç–«</a></li>
+<li><a href="https://github.com/zmkilp3104/djy/blob/master/gb/20/3/12/n11936269.md#1">ç¼˜è‡ªå¤©ä¸Šæ¥ è¿™å¯¹å¤«å¦»æ˜¯æ˜Ÿå®˜ä¸‹å‡¡</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/cbduwl3755/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/cbduwl3755/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/9/9/n11508560.htm">åŽå°”è¡—é“œç‰›å³è§’ è¢«äººç ¸ç ´ä¸€é“è£‚å£</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cbduwl3755/djy/blob/master/gb/19/9/9/n11508560.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/cbduwl3755/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/cbduwl3755/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/cbduwl3755/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/cbduwl3755/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbduwl3755/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
